solve cascade to understand specificity, inheritance and rule order in block and inline elements solve 01 and 02 exercises to understand margin, padding, border and display: block and box-sizing:border-box

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,47 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 .card {
-  width: 400px;
   background: #fff;
-  margin: 16px auto;
+  width: 480px;
+  margin: 8px auto;
+  border: 8px solid white;
+
 }
 
 .title {
   background: #e3f4ff;
+  width: 480px;
+  margin: 16px 0px 0px 0px;
+  padding: 8px;
+  box-sizing: border-box;
 }
 
 .content {
   background: #e3f4ff;
+  width: 480px;
+  margin: 8px auto;
+  padding: 8px;
+  box-sizing: border-box;
 }
 
 .button-container {
   background: #e3f4ff;
+  width: 480px;
+  margin: 8px auto;
+  padding: 8px;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px;
+  display: inline-block;
+  box-sizing: border-box;
+  
 }
