complete all 7 exercises of flex learn display flex, flex grow shrink basis positioning using flex create forms, learn align flex-direction, wrap layout of forms using flex. the last exercise couldn't do it properly have to look into solution provided but understood the concepts

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,7 +12,15 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex; 
+  justify-content: space-between;
 }
+.left, .right{
+  display: flex; 
+  align-items: center;
+  gap: 16px;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -28,6 +36,7 @@ body {
   font-weight: 900;
   font-style: italic;
 }
+
 
 button {
   border: none;
@@ -45,4 +54,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 20px;
 }
