--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -2,6 +2,23 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 52px;
+}
+
+.block {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */ 
+  max-width: 200px;
+  height: 100px;
+  text-align: center;
+  
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +27,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+  text-align: center
 }
 
 /* do not edit this footer */
