--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,7 +20,24 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
 }
+
+.header{
+  font-size: large;
+  display: flex;
+  height: 24px;
+  margin: 15px auto 10px;
+  justify-content: space-between;
+}
+
+.close-button{
+  margin-right: 15px;
+}
+
+/* .text{
+  padding-right: 20px;
+} */
 
 .icon {
   color: royalblue;
@@ -33,6 +50,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex:1 0 auto;
+  margin: 15px ;
+  margin-bottom: 0px;
 }
 
 .close-button {
@@ -60,10 +80,12 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin: 15px auto 15px;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  margin: 15px auto 15px;
 }
