--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -2,19 +2,29 @@
 
 body {
   height: 100vh;
-  margin: 0;
+  margin:auto;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  text-align: center;  
+  display: flex; 
+  flex-direction: column; 
 }
 
 img {
   width: 600px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
 }
 
 button {
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
+  margin-top:15px ; 
   background: #eee;
 }
 
@@ -23,4 +33,34 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+a{
+  color: black; 
+  text-decoration: none;
+
+}
+
+li{
+  list-style-type: none;
+}
+
+ul{
+  display: flex;
+  gap: 15px;
+  margin-right: 15px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+ 
+  
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  background-color: #eeeeee;
+   /* margin-top: auto; */
 }
